propagating fixes into merged version

--- a/KernelM/include/config/tristate.conf
+++ b/KernelM/include/config/tristate.conf
@@ -240,6 +240,7 @@ CONFIG_NF_NAT_FTP=Y
 CONFIG_LEDS_GPIO=Y
 CONFIG_BLK_DEV_RAM=Y
 CONFIG_NETFILTER_XT_MATCH_STATE=Y
+CONFIG_OFM_MOUSE=Y
 CONFIG_IR_RC5_DECODER=Y
 CONFIG_INET6_XFRM_MODE_BEET=Y
 CONFIG_FB_CFB_COPYAREA=Y
