--- a/KernelM/include/config/auto.conf
+++ b/KernelM/include/config/auto.conf
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Linux kernel version: 2.6.35.7
-# Thu Apr 19 21:26:47 2012
+# Thu Apr 19 23:12:27 2012
 #
 CONFIG_RING_BUFFER=y
 CONFIG_SCSI_DMA=y
@@ -106,6 +106,7 @@ CONFIG_STACKTRACE_SUPPORT=y
 CONFIG_ANDROID_TIMED_GPIO=y
 CONFIG_ARM=y
 CONFIG_LATENCYTOP=y
+CONFIG_INPUT_HALL=y
 CONFIG_ARM_L1_CACHE_SHIFT=6
 CONFIG_BT_RFCOMM_TTY=y
 CONFIG_CRYPTO_MANAGER_TESTS=y
@@ -631,6 +632,7 @@ CONFIG_FPE_NWFPE=y
 CONFIG_BLK_DEV_RAM=y
 CONFIG_NETFILTER_XT_MATCH_STATE=y
 CONFIG_BSD_DISKLABEL=y
+CONFIG_OFM_MOUSE=y
 CONFIG_IR_RC5_DECODER=y
 CONFIG_INET6_XFRM_MODE_BEET=y
 CONFIG_FB_CFB_COPYAREA=y
